--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title> rady1267</title>
   <script src="lib/p5.js"></script>
   <script src="lib/p5.dom.min.js"></script>
   <script src="lib/p5.sound.min.js"></script>
