--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="content">
   <div id="text">
     <h1> Title </h1>
-    blah. blah. blah.
+    안녕하세요. 심즈입니다
   </div>
   <div id="footer">SIA Art Game System 2019</div>
   </div>
